mark changed as discussed with Gert
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1915 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -313,7 +313,7 @@ in the last line requests to write the contents of this canvas to a file.
 %\end{progcode}
 }
 
-\question{a}{How can I plot grid data?}
+\question{a}{How can I plot grid data? \changed}
 {}
 {\PyX{} offers support for plotting three-dimensional data as two-dimensional
 color plots or grey-scale plots and of vector fields by providing ways to
@@ -450,7 +450,7 @@ g.stroke(g.ygridpath(0))
 
 \subsection{Data properties}
 
-\question{a}{How do I choose the symbol?}
+\question{a}{How do I choose the symbol? \changed}
 {}
 {\label{q:choose_symbol}
 Suppose a graph called \texttt{g} has been initialized, e.g. by using
@@ -464,7 +464,7 @@ g.plot(graph.data.file("test.dat"),\\
 \end{progcode}
 }
 
-\question{a}{How do I choose the color of the symbols?}
+\question{a}{How do I choose the color of the symbols? \changed}
 {}
 {Colors are not properties of the symbol as such and can therefore not
 be specified in \texttt{symbolattrs} directly. The color is rather related
@@ -479,7 +479,7 @@ graph.style.symbol(graph.style.symbol.circle,\\
 you will obtain a circle filled in green with a red borderline.
 }
 
-\question{a}{How do I choose the line style?}
+\question{a}{How do I choose the line style? \changed}
 {}
 {If you do not want to use symbols, you can set the line style as in this
 example
