constriction=None now indicates an arrowhead without constriction
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1917 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -155,6 +155,7 @@ TODO:
     - decorated path no longer allows modification of its path
     - new method excluderange which allows to remove certain parameter ranges from the stroked path
     - additional canvas provided by decorated path is now called ornaments
+    - constriction=None now indicates an arrowhead without constriction
   - trafo module:
     - trafos are now deformers
   - examples:
