--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -115,7 +115,7 @@ continuous development quite clearly. The basic parts of a graph are:
   subtasks. Axes are discussed separately in chapter~\ref{axis}.
 \end{definitions} % }}}
 
-\section{Module graph/graph: X-Y-Graphs} % {{{
+\section{Module graph.graph: X-Y-Graphs} % {{{
 \label{graph:graph}
 
 \declaremodule{}{graph.graph}
@@ -290,7 +290,7 @@ as \class{graphxy} methods \code{Xbasepath}, \code{Xvbasepath},
 \code{Xvtickpoint}, \code{Xtickdirection}, and \code{Xvtickdirection}
 where the prefix \code{X} stands for \code{x} and \code{y}. % }}}
 
-\section{Module graph/data: Data} % {{{
+\section{Module graph.data: Data} % {{{
 \label{graph:data}
 
 \declaremodule{}{graph.data}
@@ -504,7 +504,7 @@ For the sake of completeness we list the default patterns:
   the same code.
 \end{classdesc} % }}} % }}}
 
-\section{Module graph/style: Styles} % {{{
+\section{Module graph.style: Styles} % {{{
 \label{graph:style}
 
 \declaremodule{}{graph.style}
@@ -755,7 +755,7 @@ definition is:
   deco.stroked([color.grey.black])]}.
 \end{classdesc} % }}} % }}}
 
-\section{Module graph/key: Keys} % {{{
+\section{Module graph.key: Keys} % {{{
 \label{graph:key}
 
 \declaremodule{}{graph.key}
