EPS header correction (cf. #1065099 submitted by Russell Lang)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1953 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -81,6 +81,12 @@ TODO:
     - describe creation and modification (inplace and ``modify by new'') of
       graph data
 
+
+0.x (xxxx/xx/xx):
+  - canvas module:
+    - EPS header fixed (bug #1065099 but Russell Lang)
+
+
 0.7 (2004/10/21):
   - bitmap module:
     - new module for inclusion of bitmap images
