--- a/CHANGES
+++ b/CHANGES
@@ -46,7 +46,6 @@ TODO:
   - dvifile module:
     - support single-character mode
   - path module:
-    - arclentoparam should raise an exception when the arclen is out of range (Really?)
     - should split also allow the user to pass arclens (instead of params)
     - there are many occurences of 1e-5 left. Should they be replaced by the global _epsilon,
       which would change the constructors to epsilon=None... if epsilon is None: epsilon=_epsilon
@@ -56,6 +55,7 @@ TODO:
     - is the early conversion with unit.topt unit-modification-save?
   - deformer module:
     - better names for the helper functions ?
+    - why does smoothed through away short normpathitems instead of simply ignoring them?
   - open discussion:
     - clearly distingish between readers and writers. dvifile, epsfile, etc. might
       be renamed to dvireader, epsreader ...
