--- a/CHANGES
+++ b/CHANGES
@@ -87,6 +87,9 @@ TODO:
     - EPS header fixed (reported by Russell Lang, cf. bug #1065099)
   - Makefile fixes:
     - use CURDIR instead of PWD (reported by David M. Cooke, bug #1070285)
+  - pykpathsea module:
+    - support windows line endings (patch by Hans-Andreas Engel, cf. bug #1071160)
+
 
 0.7 (2004/10/21):
   - bitmap module:
