line attributes handling fixed
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1962 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -89,6 +89,8 @@ TODO:
     - use CURDIR instead of PWD (reported by David M. Cooke, bug #1070285)
   - pykpathsea module:
     - support windows line endings (patch by Hans-Andreas Engel, cf. bug #1071160)
+  - graph modules:
+    - line attributes handling fixed (reported by Andrea Riciputi)
 
 
 0.7 (2004/10/21):
