cut column name list at the max. number of columns (reported by Arnd Baecker)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1963 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -91,6 +91,7 @@ TODO:
     - support windows line endings (patch by Hans-Andreas Engel, cf. bug #1071160)
   - graph modules:
     - line attributes handling fixed (reported by Andrea Riciputi)
+    - cut column name list at the max. number of columns (reported by Arnd Baecker)
 
 
 0.7 (2004/10/21):
