add TODO wrt unit module docs
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1970 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -75,7 +75,8 @@ TODO:
     - section titles: "Axes" -> "Axes - module axis" or similar
     - box module:
       - linealign and circlealign
-    - unit module
+    - unit module:
+      update length constructor description (strings are no longer supported, etc.)
 
   FAQ:
     - describe creation and modification (inplace and ``modify by new'') of
