add readme files
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1977 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -95,7 +95,7 @@ TODO:
     - fix typos in predefined symbols (reported by Andrea Riciputi)
     - cut column name list at the max. number of columns (reported by Arnd Baecker)
   - examples:
-    - add INDEX files to distribution
+    - add INDEX and README files to distribution
     - new errorbar and julia example
   - faq:
     - pdf snippets for tipa based phonetic transliterations
