some typos corrected
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1984 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/axis.tex
+++ b/manual/axis.tex
@@ -16,7 +16,7 @@ need to fulfill:
   Ticks are plotted along the axis. They might be labeled with text as
   well.
 \term{partitioner, in the code the short form ``parter'' is used}
-  Creates one or several choises of tick lists suitable to a certain
+  Creates one or several choices of tick lists suitable to a certain
   axis range.
 \term{texter}
   Creates labels for ticks when they are not set manually.
@@ -172,7 +172,7 @@ This class is an abbreviation of \class{logarithmic} described above.
   \code{None}. By that, ticks are stroked at both sides of an
   x-y-graph. However, linked axes can be used in other cases as
   well. You can link axes within a graph or between different graphs
-  as long as the orgininal axis is finished first (it must fix its
+  as long as the original axis is finished first (it must fix its
   layout first).
 \end{classdesc}
 
@@ -198,8 +198,8 @@ This class is an abbreviation of \class{logarithmic} described above.
 
   \var{title} is the title of the split axes and \var{painter} is a
   specialized painter, which takes care of marking the axes breaks,
-  while the painting of the subaxes are performed by their painters
-  themself.
+  while the painting of the subaxes is performed by their painters
+  themselves.
 \end{classdesc}
 
 \begin{classdesc}{linkedsplit}{linkedaxis,
@@ -274,7 +274,7 @@ The following classes are part of the module \module{graph.axis.tick}.
   that it stores two integers, the numerator \code{num} and a
   denominator \code{denom}. Note that the implementation of rational
   number arithmetics is not at all complete and designed for its
-  special use case of axis parititioning in \PyX{} preventing any
+  special use case of axis partitioning in \PyX{} preventing any
   roundoff errors.
 
   \var{x} is the value of the rational created by a conversion from
