--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -27,7 +27,7 @@ units by default).\\
 extension).\\
 \texttt{width=None} & Desired width of EPS graphics or \texttt{None}
 for original width. Cannot be combined with scale specification.\\
-\texttt{heigth=None} & Desired height of EPS graphics or \texttt{None}
+\texttt{height=None} & Desired height of EPS graphics or \texttt{None}
 for original height. Cannot be combined with scale specification.\\
 \texttt{scale=None} & Scaling factor for EPS graphics or \texttt{None}
 for no scaling. Cannot be combined with width or height specification.\\
