--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -188,7 +188,7 @@ method \method{plot()} is provided:
   When the same combination of styles (\emph{i.e.} the same
   references) are used several times within the same graph instance,
   the styles are kindly asked by the graph to iterate their
-  appearence. Its up to the styles how this is performed.
+  appearance. Its up to the styles how this is performed.
 
   Instead of calling the plot method several times with different
   \var{data} but the same style, you can use a list (or something
@@ -312,7 +312,7 @@ graph. The classes are implemented in \module{graph.data}.
   The arguments \var{commentpattern}, \var{columnpattern}, and
   \var{stringpattern} are responsible for identifying the data in each
   line of the file. Lines matching \var{commentpattern} are ignored
-  except for the column name search of the last non-emtpy comment line
+  except for the column name search of the last non-empty comment line
   before the data. By default a line starting with one of the
   characters \character{\#}, \character{\%}, or \character{!} as well
   as an empty line is treated as a comment.
@@ -360,7 +360,7 @@ graph. The classes are implemented in \module{graph.data}.
   The values of \var{**columns} can refer to column numbers in the
   file starting at \code{1}. The column \code{0} is also available
   and contains the line number starting from \code{1} not counting
-  comment lines, but lines skiped by \var{skiphead}, \var{skiptail},
+  comment lines, but lines skipped by \var{skiphead}, \var{skiptail},
   and \var{every}. Furthermore values of \var{**columns} can be
   strings: file column names or complex mathematical expressions. To
   refer to columns within mathematical expressions you can also use
