--- a/manual/graphics.tex
+++ b/manual/graphics.tex
@@ -62,7 +62,7 @@ class, whose arguments count relative from the last point in the path.
 The second \class{moveto} instance opens a new subpath starting at the
 point $(1, 0)$ and ending at $(0, 1)$. Note that although both lines
 intersect at the point $(1/2, 1/2)$, they count as disconnected
-subpaths.  The general rule is that each occurence of a \class{moveto}
+subpaths.  The general rule is that each occurrence of a \class{moveto}
 instance opens a new subpath. This means that if one wants to draw a
 rectangle, one should not use
 \begin{verbatim}
