--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -26,7 +26,7 @@ Andr\'e Wobst}
 
 \maketitle
 
-\ifhtml % make abstact better available (as in the Python docs)
+\ifhtml % make abstract better available (as in the Python docs)
 \chapter*{Front Matter\label{front}}
 \fi
 \begin{abstract}
