remove superfluous remarks
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1986 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -19,10 +19,8 @@ constructor. They are summarized in the following table:
 \begin{tabularx}{\linewidth}{l>{\raggedright\arraybackslash}X}
 argument name&description\\
 \hline
-\texttt{x} & $x$-coordinate of position (measured in user
-units by default).\\
-\texttt{y} & $y$-coordinate of position (measured in user
-units by default).\\
+\texttt{x} & $x$-coordinate of position.\\
+\texttt{y} & $y$-coordinate of position.\\
 \texttt{filename} & Name of the EPS file (including a possible
 extension).\\
 \texttt{width=None} & Desired width of EPS graphics or \texttt{None}
