work in progress: path parameters and argument handling
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1992 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -86,6 +86,10 @@ TODO:
     - describe creation and modification (inplace and ``modify by new'') of
       graph data
 
+0.8 (????/??/??):
+  - path module:
+    - work in progress: path parameters and argument handling
+
 
 0.7.1 (2004/12/15):
   - canvas module:
