- start of rewrite of pdfwriter
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2014 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -95,6 +95,10 @@ TODO:
     - writeEPSfile wraps a canvas in a single page document and performs the output
   - bbox module:
     - add _pt methods
+  - pdfwriter module:
+    - completely rewritten
+  - pswriter module: new
+    - separate PS output from canvas
 
 
 0.7.1 (2004/12/15):
